# apophenia

./: AUTHORS  CNAME  COPYING2  ChangeLog  Histosec.html  Makefile  Makefile.am  Makefile.in  NEWS  README  README.developer  README.md  _formulas.tex  acinclude.m4  aclocal.m4  admin.html  annotated.html  annotated.js  annotated_dup.js  apop.h  apop.h.in  apop.i  apop.m4.h  apop_8h.html  apop_8h_source.html  apop__arms_8c.html  apop__asst_8c.html  apop__bootstrap_8c.html  apop__conversions_8c.html  apop__data_8c.html  apop__data_8m4_8c.html  apop__db_8c.html  apop__db__mysql_8c.html  apop__db__sqlite_8c.html  apop__db__to__crosstab_8c.html  apop__fexact_8c.html  apop__fix__params_8c.html  apop__hist_8c.html  apop__internal_8h_source.html  apop__linear__algebra_8c.html  (+423 more)
apophenia-0.999/tests/: Makefile.am  Readme  data-mixed  distribution_tests.c  printing_sample  sort_example.c  test_apop.c  test_data2  test_data_fixed_width  test_data_nans  update_via_rng.c
cmd/: Makefile.am  Makefile.in  apop_db_to_crosstab.c  apop_lookup.c  apop_plot_query.c  apop_text_to_db.c
doc/: documentation.h  doxyconfig  edit_group  make_model_doc.awk  structs.dot
docs/: Makefile.am  Makefile.in  adjust  apop_data_fig.html  apop_data_fig.tex  documentation.h  doxyconfig  doxygen.conf.in  edit_globals.sed  edit_group  edit_group.sed  edit_outline.sed  edit_width.sed  foot.html  head.html  make_model_doc.awk  structs.dot  triangle.c  typical.css
doxy/: documentation.h  doxyconfig  edit_group  head.html  model.dot  model_doc.h  structs.dot  tree.js  triangle.c  typical.css
eg/: Makefile.am  Makefile.in  apop_map_row  apop_map_row.c  banana.c  binning  binning.c  boot_clt.c  cross_models.c  data  data_fill.c  db_fns  db_fns.c  dconstrain  dconstrain.c  dot_products  dot_products.c  draw_some_normals.c  draw_to_db  draw_to_db.c  entropy_model.c  entropy_vector.c  f_test.c  faithful.c  fake_logit  fake_logit.c  fisher.py  fix_params  fix_params.c  hills2  hills2.c  iv  iv.c  jack.c  jacobian  jacobian.c  kernel.c  ks_tests  ks_tests.c  logit.c  (+44 more)
eg/.libs/: apop_map_row  binning  db_fns  dconstrain  dot_products  draw_to_db  fake_logit  fix_params  hills2  iv  jacobian  ks_tests  lt-apop_map_row  lt-binning  lt-db_fns  lt-dconstrain  lt-dot_products  lt-draw_to_db  lt-fake_logit  lt-fix_params  lt-hills2  lt-iv  lt-jacobian  lt-ks_tests  lt-normalizations  lt-parameterization  lt-pmf_test  lt-simple_subsets  lt-some_cdfs  lt-stack_models  lt-test_distances  lt-test_fisher  lt-test_harmonic  lt-test_kl_divergence  lt-test_pruning  lt-test_ranks  lt-test_regex  lt-test_updating  normalizations  parameterization  (+12 more)
install/: COPYING2  Makefile.am  Readme-pkg  Readme-pkg-debian  acinclude.m4  apophenia.map  apophenia.pc.in  configure.ac  deb.control  deb.control-dev  deb.copyright  prep_variadics.m4  prep_variadics.sed  push_pkg  rpm.spec  upload
lib/: .doxygen  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  apop.c  apop_asst.c  apop_bootstrap.c  apop_conversions.c  apop_conversions.h  apop_data.c  apop_db.c  apop_db_to_crosstab.c  apop_estimate.c  apop_fexact.c  apop_histogram.c  apop_likelihoods.c  apop_likelihoods.h  apop_linear_algebra.c  apop_linear_algebra.h  apop_merge_dbs.c  apop_mle.c  apop_name.c  apop_output.c  apop_regression.c  apop_stats.c  apop_stats.h  apop_text_to_db.c  apophenia.texi  asst.c  bootstrap.c  bootstrap.h  cmd_apop.c  cmd_apop_db_to_crosstab.c  cmd_apop_merge_dbs.c  cmd_apop_text_to_db.c  configure.ac  configure.in  (+31 more)
lib/doxy/: foot.html
lib/gnulib/: Makefile.am  configure.ac  vasprintf.h
lib/gnulib/m4/: gnulib.m4
lib/model/: apop_OLS.c  apop_WLS.c  apop_exponential.c  apop_exponential_rank.c  apop_gamma.c  apop_gamma_rank.c  apop_logit.c  apop_model_template.c  apop_normal.c  apop_poisson.c  apop_probit.c  apop_rank_exponential.c  apop_rank_gamma.c  apop_waring.c  apop_waring_rank.c  apop_yule.c  apop_yule_rank.c  apop_zipf.c  apop_zipf_rank.c  model.h
lib/models/: apop_exponential.c  apop_gamma.c  apop_waring.c
lib/tests/: Makefile  test.c  test_data
lib/wn/: wnasrt.c  wnaux.h  wnbridge.c  wncnjdn2.c  wnconjg.c  wnlib.h  wnmatrices.c  wnmbtr.c  wnmem.c  wnmemg.c  wnmemn.c  wnvect.c
model/: Makefile.am  Makefile.in  apop_IV.c  apop_OLS.c  apop_WLS.c  apop_bernoulli.c  apop_beta.c  apop_binomial.c  apop_dcompose.c  apop_dirichlet.c  apop_exponential.c  apop_exponential_rank.c  apop_gamma.c  apop_gamma_rank.c  apop_histogram.c  apop_kernel.c  apop_kerneld.c  apop_loess.c  apop_logit.c  apop_lognormal.c  apop_mixture.c  apop_model_stack.c  apop_model_template.c  apop_multinomial.c  apop_multinomial_probit.c  apop_multivariate_normal.c  apop_normal.c  apop_ols.c  apop_pmf.c  apop_poisson.c  apop_probit.c  apop_t.c  apop_t_f_chi.c  apop_uniform.c  apop_waring.c  apop_waring_rank.c  apop_wishart.c  apop_yule.c  apop_yule_rank.c  apop_zipf.c  (+2 more)
paper/: Makefile  apop.tex  apop_wrap.sty  betabi.eps  betauni.eps  boot.tex  c_crash.tex  ctwo.tex  finger.ps  (+32 more)
tests/: Makefile  Makefile.am  Makefile.in  Readme  amash_vote_analysis.csv  db_tests.c  distribution_tests.c  elicit_failure.py  error_test.c  factors.c  faith.data  lognormal_test.c  nist_tests.c  printing_sample  rake_test.c  slower.c  sort_example.c  sort_tests.c  test.c  test.py  test_apop.c  test_data  test_data_mixed  test_data_nans  test_kernel_ll.c  update_via_rng.c  utilities_test  utilities_test.in
tests/.deps/: apop_map_row.Po  binning.Po  db_fns.Po  db_tests.Po  dconstrain.Po  distribution_tests.Po  dot_products.Po  draw_to_db.Po  error_test.Po  fake_logit.Po  fix_params.Po  hills2.Po  iv.Po  jacobian.Po  ks_tests.Po  nist_tests.Po  normalizations.Po  parameterization.Po  pmf_test.Po  rake_test.Po  simple_subsets.Po  some_cdfs.Po  sort_example.Po  stack_models.Po  test_apop.Po  test_distances.Po  test_fisher.Po  test_harmonic.Po  test_kl_divergence.Po  test_pruning.Po  test_ranks.Po  test_regex.Po  test_updating.Po  update_via_rng.Po
transform/: Makefile.am  Makefile.in  apop_coordinate_transform.c  apop_cross.c  apop_dcompose.c  apop_dconstrain.c  apop_fix_params.c  apop_mixture.c  apop_stack.c
(+144 files in other folders)
