
EXTRA_DIST = \
	apop_map_row.c \
	banana.c \
	binning.c \
	db_fns.c \
	dconstrain.c \
	dot_products.c \
	draw_some_normals.c \
	draw_to_db.c \
	faithful.c \
	fake_logit.c \
	fix_params.c \
	hills2.c \
	iv.c \
	jacobian.c \
	kernel.c \
	ks_tests.c \
	ls_tables.c \
	normalizations.c \
	ols2.c \
	ols.c \
	parameterization.c \
	pmf_test.c \
	simple_subsets.c \
	some_cdfs.c \
	sql_to_html.c \
	stack_models.c \
	t_test_by_rows.c \
	test_distances.c \
	test_fisher.c \
	test_harmonic.c \
	test_kl_divergence.c \
	test_pruning.c \
	test_ranks.c \
	test_regex.c \
	test_updating.c \
	text_demo.c
